implement username update functionality (fullstack) : - backend : implement patch route for username update, update swagger.yaml documentation (API REST tested Ok) - frontend : display messages after username update, add redirection with delay, after successful action.
